Events And Dashboard implementation

--- a/src/app/components/cal/cal.component.html
+++ b/src/app/components/cal/cal.component.html
@@ -12,11 +12,12 @@
 </div>
 
 
-<table style="padding: 2rem;">
-    <tr style="padding: 4px;
-    position: relative; ">
-        <th *ngFor="let day of days">
-            <div style="padding: 10px; border: 1px solid black;">
+<table style="padding: 2rem; margin-top: 2rem;  border-collapse: collapse;
+border-spacing: 0;
+font-size: 1em; " >
+    <tr>
+        <th *ngFor="let day of days" style="box-sizing: border-box;">
+            <div style="padding: 2px; border: 1px solid black; ">
                 {{day.name}}
             </div>
            
@@ -26,7 +27,12 @@
     <tbody>
         <tr *ngFor="let week of weeks">
             <td *ngFor="let day of week" (click)='dateClicked(day)' [class]="{'other-month': day.getMonth() !== month}">
-                {{day.getDate()}}
+                
+                <div style=" border: 1px solid black; 
+                 min-height: 100%; padding: 4px;position: relative;z-index: 4; vertical-align: top;    display: flex;
+    flex-direction: row-reverse; " >
+                    {{day.getDate()}}
+                </div>
             </td>
         </tr>
     </tbody>
