--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -1,10 +1,13 @@
 
 <div>
-    <button (click)="showMasterSearchModal()" class="underlined-button">
+    <div style="padding:10px">
+        <button (click)="showMasterSearchModal()" class="underlined-button">
   
-        <span *ngIf="selectedEmployees.length > 0 || selectedEmployeeRecord">Update</span>
-        <span *ngIf="selectedEmployees.length < 1 && !selectedEmployeeRecord">Add Employee</span>
-    </button>
+            <span *ngIf="selectedEmployees.length > 0 || selectedEmployeeRecord">Update</span>
+            <span *ngIf="selectedEmployees.length < 1 && !selectedEmployeeRecord">Add Employee</span>
+        </button>
+    </div>
+
     <ngx-employee-list [allowmultipleselection]="allowmultipleselection" [selectedEmployees]="selectedEmployees" [selectedEmployeeRecord]="selectedEmployeeRecord"></ngx-employee-list>
 
 </div>
@@ -12,86 +15,95 @@
 <ngx-side-modal [(show)]="showModal">
     <div modal-header>{{selectionHeader}}</div>
     <div modal-body style="background: #fff;">
-        <div>
-        <form id="searchForm" name="searchForm" #searchForm="ngForm">
-        <nb-form-field>
-            <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-            <input #searchtText type="text" id="searchtText" name="searchtText" nbInput class="form-control" [(ngModel)]="filterObject.searchtText">
-        </nb-form-field>
-        <div class="row" style="padding-top:10px">
-            <div class="col-sm-4 form-group">
-                <label>Department</label>
-                <select class="form-control" #searchDepartment  id="searchDepartment" name="searchDepartment" [(ngModel)]="filterObject.searchDepartment">
-                    <option value="0">--Select Department--</option>
-                    <option *ngFor="let dep of allDepartment;" [value]="dep.id">{{dep.name}}</option>
-                </select>
-            </div>
-            <div class="col-sm-4 form-group">
-                <label>Location</label>
-                <select class="form-control" #searchLocation  id="searchLocation" name="searchLocation" [(ngModel)]="filterObject.searchLocation">
-                    <option value="0">--Select Location--</option>
-                    <option *ngFor="let loc of allLocation;" [value]="loc.id">{{loc.location_name}}</option>
-                </select>
-            </div>
-            <div class="col-sm-4 form-group">
-                <label>Job Role</label>
-                <select class="form-control" #searchJobRole  id="searchJobRole" name="searchJobRole"   [(ngModel)]="filterObject.searchJobRole">
-                    <option value="0">--Select Role--</option>
-                    <option *ngFor="let job of allJobRole;" [value]="job.id">{{job.name}}</option>
-                </select>
-            </div>
-            <div class="col-sm-4 form-group">
-                <label>Grade</label>
-                <select class="form-control" #saerchGrade  id="saerchGrade" name="saerchGrade"  [(ngModel)]="filterObject.saerchGrade">
-                    <option value="0">--Select Grade--</option>
-                    <option *ngFor="let gra of allGrade;" [value]="gra.id">{{gra.name}}</option>
-                </select>
-            </div>
-            <div class="col-sm-4 form-group">
-                <label>Salary Scale</label>
-                <select class="form-control" #salaryscaleId  id="salaryscaleId" name="salaryscaleId"  [(ngModel)]="filterObject.salaryscaleId">
-                   <option value="0">--Select Scale--</option>
-                    <option *ngFor="let sal of allsalaryScale;" [value]="sal.id">{{sal.name}}</option>
-                </select>
-            </div>
-            <div class="col-sm-4 form-group" style="padding-top:26px">         
-                <button [disabled]="disableSearchBtn" *ngIf="!searchbtnclicked" (click)="getallemployee()" nbButton status='primary' style="min-width: unset !important;">Search</button>
-                <button *ngIf="searchbtnclicked" nbButton status='primary' style="min-width: unset !important;">Processing&nbsp;<i class="fa fa-spin fa-spinner"></i></button>
-            </div>
-        </div>
-        </form>
-        </div>
-        <div>
-            <div *ngIf="allowmultipleselection" style="display: flex; justify-content: flex-end; margin: 1rem 0rem">
-                <span style="color: #4847E0; cursor: pointer;">Select All</span>
-            </div>
-            <div style="border-top: 0.5px solid #CCCCCC;;">
-                <div  *ngFor="let emp of allEmployees; let i = index" style="display: flex; align-items: center; border-bottom: 0.5px solid #CCCCCC; padding: 1rem;">
-                    <input type="checkbox" (change)="updateSelectedEmployee(i)" [checked]="emp.checkInputValue"  style="margin-right: 2rem;"/>
-                    <div style="display: flex;">
-                        <img style="width: 3rem; height: 3rem; border-radius: 50%; margin-right: 1rem;" [src]="emp.profilePic" onError="this.src = 'assets/icons/camera.jpg'"/>
-                        <div style="display: flex; justify-content: space-between; flex-direction: column;">
-                            <div style="font-family: Rubik;
-                                    font-style: normal;
-                                    font-weight: normal;
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    display: flex;">
-                                    {{emp.firstName}}&nbsp;{{emp.lastName}}</div>
-                            <div style="font-family: Rubik;
-                                    font-style: normal;
-                                    font-weight: normal;
-                                    font-size: 14px;
-                                    display: flex;
-                                    color: #6C757D;">{{emp.jobRoleName}}</div>
+        <nb-card style="border: none;padding: 0px;margin: 0px;">
+            <nb-card-body style="padding: 0px;margin: 0px;">
+                <div>
+                    <form id="searchForm" name="searchForm" #searchForm="ngForm">
+                    <nb-form-field>
+                        <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+                        <input #searchtText type="text" id="searchtText" name="searchtText" nbInput class="form-control" [(ngModel)]="filterObject.searchtText">
+                    </nb-form-field>
+                    <div class="row" style="padding-top:10px">
+                        <div class="col-sm-6 form-group">
+                            <label>Department</label>
+                            <select class="form-control" #searchDepartment  id="searchDepartment" name="searchDepartment" [(ngModel)]="filterObject.searchDepartment">
+                                <option value="0">--Select Department--</option>
+                                <option *ngFor="let dep of allDepartment;" [value]="dep.id">{{dep.name}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <label>Location</label>
+                            <select class="form-control" #searchLocation  id="searchLocation" name="searchLocation" [(ngModel)]="filterObject.searchLocation">
+                                <option value="0">--Select Location--</option>
+                                <option *ngFor="let loc of allLocation;" [value]="loc.id">{{loc.location_name}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <label>Job Role</label>
+                            <select class="form-control" #searchJobRole  id="searchJobRole" name="searchJobRole"   [(ngModel)]="filterObject.searchJobRole">
+                                <option value="0">--Select Role--</option>
+                                <option *ngFor="let job of allJobRole;" [value]="job.id">{{job.name}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <label>Grade</label>
+                            <select class="form-control" #saerchGrade  id="saerchGrade" name="saerchGrade"  [(ngModel)]="filterObject.saerchGrade">
+                                <option value="0">--Select Grade--</option>
+                                <option *ngFor="let gra of allGrade;" [value]="gra.id">{{gra.name}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <label>Salary Scale</label>
+                            <select class="form-control" #salaryscaleId  id="salaryscaleId" name="salaryscaleId"  [(ngModel)]="filterObject.salaryscaleId">
+                               <option value="0">--Select Scale--</option>
+                                <option *ngFor="let sal of allsalaryScale;" [value]="sal.id">{{sal.name}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group" style="padding-top:26px">         
+                            <button [disabled]="disableSearchBtn" *ngIf="!searchbtnclicked" (click)="getallemployee()" nbButton status='primary' style="min-width: unset !important;">Search</button>
+                            <button *ngIf="searchbtnclicked" nbButton status='primary' style="min-width: unset !important;">Processing&nbsp;<i class="fa fa-spin fa-spinner"></i></button>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div style="display: flex; justify-content: flex-end; margin: 1rem;">
-            <button [disabled]="!disableaddbtn" (click)="okMasterSearch()" nbButton status='primary' style="margin-right: 0.5rem;">{{addbtnText}}</button>
+                    </form>
+                    </div>
+                    <div>
+                        <div *ngIf="allowmultipleselection" style="display: flex; justify-content: flex-end; margin: 1rem 0rem">
+                            <span style="color: #4847E0; cursor: pointer;">Select All</span>
+                        </div>
+                        <div style="border-top: 0.5px solid #CCCCCC;;">
+                            <div  *ngFor="let emp of allEmployees; let i = index" style="display: flex; align-items: center; border-bottom: 0.5px solid #CCCCCC; padding: 1rem;">
+                                <input type="checkbox" (change)="updateSelectedEmployee(i)" [checked]="emp.checkInputValue"  style="margin-right: 2rem;"/>
+                                <div style="display: flex;">
+                                    <img style="width: 3rem; height: 3rem; border-radius: 50%; margin-right: 1rem;" [src]="emp.profilePic" onError="this.src = 'assets/icons/camera.jpg'"/>
+                                    <div style="display: flex; justify-content: space-between; flex-direction: column;">
+                                        <div style="font-family: Rubik;
+                                                font-style: normal;
+                                                font-weight: normal;
+                                                font-size: 16px;
+                                                line-height: 19px;
+                                                display: flex;">
+                                                {{emp.firstName}}&nbsp;{{emp.lastName}}</div>
+                                        <div style="font-family: Rubik;
+                                                font-style: normal;
+                                                font-weight: normal;
+                                                font-size: 14px;
+                                                display: flex;
+                                                color: #6C757D;">{{emp.jobRoleName}}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </nb-card-body>
+        </nb-card>
+   
+
+    </div>
+    <div modal-actions style="margin-top: 10px; margin-bottom: 10px;display: flex;flex-direction: row;">
+        <button [disabled]="!disableaddbtn" (click)="okMasterSearch()" nbButton status='primary' style="margin-right: 0.5rem;">{{addbtnText}}</button>         
+        <div style="padding-left: 15px;">
             <button (click)="cancelMasterSearch()" nbButton status='primary' outline style="background: transparent;">Cancel</button>
+       
         </div>
     </div>
 </ngx-side-modal>
