--- a/src/app/modules/employeemodule/promotion/promotion.component.html
+++ b/src/app/modules/employeemodule/promotion/promotion.component.html
@@ -1,6 +1,6 @@
 <ngx-componentsheader [pageName]='pageName' >
 <div headerButton style="display: flex; flex-direction: row;">
-  <div *ngIf="!eligibilityBucket" style="display: flex; flex-direction: row;">
+  <div *ngIf="eligibilityBucket" style="display: flex; flex-direction: row;">
     <div><button  nbButton status="primary"  class="d-flex column">Submit List</button></div>
     <div style="padding-left: 5px;"> <button  nbButton status="primary"  class="d-flex column">Save List</button></div>
     <div style="padding-left: 5px;">
@@ -46,16 +46,52 @@
 <ngx-side-modal [(show)]='submitList' style="width: 500px;">
   <div modal-header>Add to List</div>
   <div modal-body>
-    <nb-card>
-            <div class="form-group row mydiv">
-              <div class="col">
-                <label for="Channel" class="col-form-label mylabel"></label>
-                <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
-              </div>
-            </div>
+    <nb-card style="border: none;">
+      <div class="row" style="padding-top:10px">
+        <div class="col-sm-6 form-group">
+          <label>Follow Promotion Rule</label>
+          <select class="form-control" [(ngModel)]="gOptions.promotionRuleId" name="promotionRuleId" id="promotionRuleId" #promotionRuleId="ngModel" >
+            <option value="">--Select Rule--</option> 
+                 
+        </select>
+  
+        </div>
+        <div class="col-sm-6 form-group">
+          <label>Promotion Category</label>
+          <select class="form-control" [(ngModel)]="gOptions.promotionCategoryId" name="promotionCategoryId" id="promotionCategoryId" #promotionCategoryId="ngModel" >
+            <option value="">--Select Category--</option> 
+               
+        </select>
+  
+        </div>
+        <div class="col-sm-12 form-group">
+          <label>Target Position</label>
+          <select class="form-control"  required [(ngModel)]="gOptions.promotionTargetId" name="promotionTargetId" id="promotionTargetId" #promotionTargetId="ngModel">
+            <option value="">--Select Title--</option> 
+            <option *ngFor="let jTitle of allPositions" [value]="jTitle.id">{{jTitle.title}}</option>            
+        </select>
+        <div *ngIf="promotionTargetId.invalid && (promotionTargetId.dirty || promotionTargetId.touched)" class="error">
+          <div *ngIf="promotionTargetId.errors.required">Job Title is required</div>
+        </div>
+        </div>
+        <div class="col-sm-12 form-group">
+          <label for="Employee Name" style="font-size: small;font-weight: bold;">Employee:</label>
+         <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+      </div>
+      </div>
+         
     </nb-card>
 
   </div>
+  <div modal-actions style="margin-top: 10px; margin-bottom: 10px;display: flex;flex-direction: row;">
+    <ngx-loadable-button [loading]="loading"  (click)="addEmployeetoBucketList()" >
+      Update List
+    </ngx-loadable-button>           
+    <div style="padding-left: 15px;">
+      <button  outline="true" (click)="submitList = false"  nbButton status="primary" class="d-flex column" >Discard</button>
+   
+    </div>
+</div>
 </ngx-side-modal>
 
 
