--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -10,6 +10,15 @@
   </nb-card>
 </div>
 
+<!-- <div>
+  <nb-card>
+    <nb-card-body>
+      <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent [loading]='loading' [tableColum]="loanRequestTable" [userData]='data' [actions]='tableActions' (actionClick)="tableActionClicked($event)"></ngx-tablecomponent>
+    </nb-card-body>
+  </nb-card>
+</div> -->
+
 <div *ngIf="pageNo == 2" class="row">
   <div class="col-lg-3 col-md-3 col-xxl-3">
     <nb-card>
